# ecommerce

./: README.md  pyproject.toml
ecommerce/: app.py  database.py  models.py  schemas.py  security.py  settings.py
ecommerce/api/: __init__.py  router.py
ecommerce/api/routes/: auth.py  products.py  users.py
ecommerce/core/: __init__.py  database.py  security.py  settings.py
ecommerce/core/utils/: ids.py
ecommerce/products/: __init__.py  models.py  repositories.py  schemas.py  services.py
ecommerce/public/: schemas.py
ecommerce/public/models/: users.py
ecommerce/public/routes/: auth.py  users.py
ecommerce/public/schemas/: users.py
ecommerce/users/: __init__.py  models.py  repositories.py  schemas.py  services.py
migrations/: env.py
migrations/versions/: 4aee8f008088_create_users_table.py  614495d1a7e7_create_users_table.py  878adcf9b65d_create_products_table.py
tests/: conftest.py  test_admin_app.py  test_app.py  test_cart_app.py  test_checkout_app.py  test_db.py  test_payment_app.py  test_products_app.py  test_products_service.py  test_security.py  test_token_app.py  test_users_app.py  test_users_service.py
